# botudien

./: README.md  setup.cfg
docs/: botudien.rst  conf.py  index.rst
src/botudien/: __init__.py  api.py  vi-flash.py  vi-quiz.py  vi-write.py  vi.py
