[metadata]
name = botudien
version = 0.0.15
author = easai
description = botudien API tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easai/botudien
license_files = LICENSE
license = MIT
project_urls =
    Bug Tracker = https://github.com/easai/botudien/issues
classifiers =
    Programming Language :: Python :: 3.10.0
    License :: OSI Approved :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
